add pc rep node to super policy (#116)
* add super pc rep and update test

* change the super policy to only have one OA and update tests